PSD: reimplement the PackBits decompressor

This commit reimplements the decompression routine in C++11 to enable
proper bounds checking, logging, and skipping the unnecessary copies.

BUG: 462417